add common error
